chore: Update relationships in models to use LoanOrders and LoanOrderDetails
